<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp" >

    <TextView
        android:id="@+id/txt_reviewer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reviewer" />

    <TextView
        android:id="@+id/txt_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time" />

    <TextView
        android:id="@+id/txt_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category" />

    <TextView
        android:id="@+id/txt_nominee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nominee" />

    <TextView
        android:id="@+id/txt_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review" />

</LinearLayout>