<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/title_text_color"
        android:textSize="25dp"
        android:text="@string/hello" />
    <EditText
        android:background="#CCFFFFFF"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:hint="@string/edit_text_hint"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:id="@+id/text_view_data" />
    
    <Button 
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:textSize="15dp"
        android:layout_margin="5dp"
        android:text="@string/enter_data_button_text"
        android:id="@+id/buttons_send_data"/>
    

</LinearLayout>